tests/miniJava/pos/000807_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { if ( new int [ 0 ] ) while ( 0 ) { } else java = 0 ; } }
