tests/miniJava/neg/001450_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = new int ( 0 ] ; } }
